terraform/terraform-base/live/prod/eks/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: apps
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: / 
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  # defaultBackend:
  #   service:
  #     name: api-ingress
  #     port:
  #       name: svc-port
  tls:
  - hosts: 
    - api.averbuchpro.com
    secretName: letsencrypt-prod-tls
  rules:
  - host: api.averbuchpro.com
    http:
      paths:
        - path: /recipes
          pathType: Prefix
          backend:
            service:
              name: recipes-prod-service
              port:
                number: 80
        - path: /suppliers 
          pathType: Prefix
          backend:
            service:
              name: suppliers-prod-service
              port:
                number: 80
